[gd_scene load_steps=13 format=2]

[ext_resource path="res://screens/settings/settings.gd" type="Script" id=1]
[ext_resource path="res://screens/menu_bottom_bar/menu_buttom_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 1
extra_spacing_top = 8
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
shadow_size = 16

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.352941, 0.352941, 0.352941, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_top = 8
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.352941, 0.352941, 0.352941, 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
extra_spacing_top = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 48
extra_spacing_top = 8
extra_spacing_char = 4
font_data = ExtResource( 3 )

[node name="settings" type="CanvasLayer"]
layer = 95
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.717647, 0.74902, 0.756863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
anchor_left = 0.414
anchor_top = 0.747
anchor_right = 0.586
anchor_bottom = 0.827
margin_left = 0.0639648
margin_top = -0.200012
margin_right = -0.0640259
margin_bottom = -0.200012
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_buttom_bar" parent="." instance=ExtResource( 2 )]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.125
anchor_top = 0.16
anchor_right = 0.875
anchor_bottom = 0.707
margin_top = 7.62939e-06
margin_bottom = -0.199982
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_bg" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -132.0
margin_right = 320.0
margin_bottom = -12.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Label" parent="Panel/music_bg"]
margin_left = 32.0
margin_top = 40.0
margin_right = 129.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
text = "เสียงเพลง"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mute_music_button" type="Button" parent="Panel/music_bg"]
visible = false
margin_left = 448.0
margin_top = 32.0
margin_right = 616.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "ปิด"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_volume" type="HSlider" parent="Panel/music_bg"]
margin_left = 256.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 96.0
min_value = -80.0
max_value = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_bg" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 12.0
margin_right = 320.0
margin_bottom = 140.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mute_sfx_button" type="Button" parent="Panel/sfx_bg"]
visible = false
margin_left = 448.0
margin_top = 32.0
margin_right = 616.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 5 )
text = "ปิด"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx" type="Label" parent="Panel/sfx_bg"]
margin_left = 32.0
margin_top = 32.0
margin_right = 192.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 6 )
text = "เสียง EFFECT"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_volume" type="HSlider" parent="Panel/sfx_bg"]
margin_left = 256.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 88.0
min_value = -80.0
max_value = 24.0

[node name="setting_head" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.092
anchor_right = 0.5
anchor_bottom = 0.092
margin_left = -104.0
margin_top = -23.2
margin_right = 97.0
margin_bottom = 22.8
custom_fonts/font = SubResource( 7 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
